--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>card</title>
+    <title>Aru</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,25 +36,26 @@
             A pretty person, with a heart of gold-->
 
         
-        <p class="j1">ア</p>
-        <p class="j2">ル</p>
-        <p class="j3">ニ</p>
-        <p class="j4">マ</p>
+        <p class="j1"></p>
+        <p class="j2"></p>
+        <p class="j3"></p>
+        <p class="j4"></p>
+        <!--アルニマ-->
 
         <a href="https://www.instagram.com/illchangeitlaterig/" target="_blank">
-            <button class="insta"><i class="fa fa-instagram" aria-hidden="true"> </i></button>
+            <button class="insta">INSTAGRAM</button>
         </a>
 
         <a href="" target="_blank">
-            <button class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></button>
+            <button class="twitter">TWITTER</button>
         </a>
 
         <a href="" target="_blank">
-            <button class="spotify"><i class="fa fa-spotify" aria-hidden="true"></i></button>
+            <button class="spotify">SPOTIFY</button>
         </a>
 
         <a href="" target="_blank">
-            <button class="pintrest"><i class="fa fa-pinterest" aria-hidden="true"></i></button>
+            <button class="pintrest">PINTREST</button>
         </a>
 
         <a href="adhyuth.cartes.in" target="_blank">
