--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
         <p class="name">A R U N I M A</p>
 
-        <p class="age">16 ,</p>
-        <p class="she">she / her ,</p>
-        <p class="aries">Aries ,</p>
+        <p class="age">16 </p>
+        <p class="she">she / her </p>
+        <p class="aries">Aries </p>
         <p class="editor">editor</p>
-        <p class="poem">" In her eyes, the stars do shine, </p>
+        <!--<p class="poem">" In her eyes, the stars do shine, </p>
         <p class="poem2">Her smile, a crescent moon divine. </p>
         <p class="poem3">Her voice, a melody, sweet and true, </p>
         <p class="poem4">A symphony of kindness, in all she do. </p>
@@ -46,15 +46,15 @@
             <button class="insta">INSTAGRAM</button>
         </a>
 
-        <a href="" target="_blank">
+        <a href="https://twitter.com/arunima1295" target="_blank">
             <button class="twitter">TWITTER</button>
         </a>
 
-        <a href="" target="_blank">
+        <a href="https://open.spotify.com/user/dxjnnrnx3jof3cf7uxbvl0t86?si=580b15255a5d429b" target="_blank">
             <button class="spotify">SPOTIFY</button>
         </a>
 
-        <a href="" target="_blank">
+        <a href="https://in.pinterest.com/arunimad05/" target="_blank">
             <button class="pintrest">PINTREST</button>
         </a>
 
@@ -63,6 +63,9 @@
                 AK
             </button>
         </a>
+        
+
+        <p class="bsd">obsessed with Bungo Stray Dogs and Necromancer survival</p>
         
 
 
